# SQLiteCleaner

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: add_notice.yaml  bump_version.yaml  cargo_attribution.yaml  cargo_miri.yaml  cargo_semver_checks.yaml  ci.yaml  release.yml
src/: configuration.rs  database.rs  logger.rs  main.rs
src/test/: mod.rs  test.rs  tests.rs  utils_tests.rs
