[package]
name = "SqliteCleaner"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Maxime-Cllt/SqliteCleaner.git"
description = "A simple tool to clean your sqlite database"
authors = ["Maxime Cllt"]


[dependencies]
chrono = "0.4.39" # Date and time library for Rust
sqlite = "0.36.1"
num-format = "0.4.4"

[dev-dependencies]

[profile.dev]
incremental = true # Compile your binary in smaller steps.
codegen-units = 20
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true

[profile.release]
incremental = false
codegen-units = 1
opt-level = 2
panic = "abort"
strip = true
debug = false
lto = true
overflow-checks = false