[package]
name = "SQLiteCleaner"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Maxime-Cllt/SQLiteCleaner.git"
description = "A simple tool to clean your SQLite database"
authors = ["Maxime-Cllt"]


[dependencies]
chrono = "*"
sqlite = "*"
num-format = "*"
once_cell = "*"

[dev-dependencies]

[profile.dev]
incremental = true
codegen-units = 20
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = true
overflow-checks = false