[package]
name = "SQLiteCleaner"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Maxime-Cllt/SQLiteCleaner.git"
description = "A simple tool to clean your SQLite database"
keywords = ["sqlite", "cleaner", "database", "tool"]
license = "GPL-3.0"
categories = ["command-line-interface", "database"]
authors = ["Maxime-Cllt"]


[dependencies]
chrono = "^0.4.42"
sqlite = "^0.37.0"
num-format = "^0.4.4"
once_cell = "^1.21.3"

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.test]
incremental = true
opt-level = 1
debug = false
overflow-checks = true
codegen-units = 50
lto = false

[profile.release]
incremental = false
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
rpath = false
debug-assertions = false